# xcode-discord-rpc

./: CHANGELOG.md  Cargo.toml  default.toml  report.json
.github/workflows/: brew.yml
src/: config.rs  error.rs  main.rs  xcode_state.rs
src/utils/: file_language.rs  mod.rs  osascript.rs
