[package]
name = "xcode-discord-rpc"
version = "1.1.0"
edition = "2021"
authors = ["Yumi Izumi <me@yumiizumi.com>"]
license = "MIT"
repository = "https://github.com/izyumidev/xcode-discord-rpc"
homepage = "https://github.com/izyumidev/xcode-discord-rpc"
description = "A simple Discord Rich Presence client for Xcode"
readme = "README.md"
keywords = ["xcode", "discord", "rich", "presence", "rpc"]
categories = ["development-tools"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
discord-rich-presence = "0.2.3"
chrono = "0.4.31"
clap = { version = "4.0", features = ["derive", "cargo"] }
thiserror = "2.0.11"
config = "0.15.8"
serde = { version = "1.0.217", features = ["derive"] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "timestamps",
] }
log = "0.4.25"
